--- a/.github/workflows/tenkai_features_c.yml
+++ b/.github/workflows/tenkai_features_c.yml
@@ -1,82 +1,59 @@
-name: Build TENKAI C features
+name: build-c-features
 
 on:
   workflow_dispatch:
     inputs:
       date:
-        description: '対象日 (YYYYMMDD)'
+        description: "レース日付 (YYYYMMDD)"
         required: true
       pid:
-        description: '場コード pid (例: 02)'
+        description: "場コード (例: 02)"
         required: true
       race:
-        description: 'レース (例: 1R) 空なら全R'
+        description: "レース番号 (例: 1R)"
         required: false
-        default: ''
-
-permissions:
-  contents: write
-
-concurrency:
-  group: tenkai-c-${{ github.ref }}
-  cancel-in-progress: true
+        default: ""
 
 jobs:
-  build-c-features:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas python-dateutil
+          pip install -r requirements.txt || true
 
       - name: Sanity check
         run: |
-          test -f TENKAI/features_c.py        || { echo "TENKAI/features_c.py がありません"; exit 1; }
-          test -f TENKAI/build_c_features.py  || { echo "TENKAI/build_c_features.py がありません"; exit 1; }
+          test -f TENKAI/features_c.py || { echo "TENKAI/features_c.py がありません"; exit 1; }
 
       - name: Ensure TENKAI package
-        run: |
-          mkdir -p TENKAI
-          [ -f TENKAI/__init__.py ] || touch TENKAI/__init__.py
+        run: mkdir -p TENKAI
 
       - name: Build C features
         shell: bash
         run: |
-          set -euo pipefail
-          # TENKAI を import できるようにリポジトリ直下をパス追加
-          export PYTHONPATH="$PYTHONPATH:$(pwd)"
+          set -eo pipefail
+          export PYTHONPATH="${PYTHONPATH:-}:$(pwd)"
 
           RACE_OPT=""
           if [ -n "${{ github.event.inputs.race }}" ]; then
             RACE_OPT="--race '${{ github.event.inputs.race }}'"
           fi
 
+          echo ">>> 実行コマンド"
           echo "python TENKAI/build_c_features.py --date '${{ github.event.inputs.date }}' --pid '${{ github.event.inputs.pid }}' $RACE_OPT"
+
           python TENKAI/build_c_features.py \
             --date "${{ github.event.inputs.date }}" \
             --pid  "${{ github.event.inputs.pid }}" \
             ${RACE_OPT}
-
-      - name: Commit outputs
-        run: |
-          git config user.name  "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add TENKAI/features_c/v1/** || true
-          git diff --cached --quiet || git commit -m "TENKAI C features: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} ${{ github.event.inputs.race }}"
-          git push
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: tenkai-c-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
-          path: TENKAI/features_c/v1/**
-          if-no-files-found: warn
