--- a/.github/workflows/tenkai_features_c.yml
+++ b/.github/workflows/tenkai_features_c.yml
@@ -1,4 +1,3 @@
-# .github/workflows/build-c-features.yml
 name: Build TENKAI C features
 
 on:
@@ -11,8 +10,9 @@ on:
         description: '場コード pid (例: 02)'
         required: true
       race:
-        description: 'レース (例: 1R)'
-        required: true
+        description: 'レース (例: 1R) 空なら全R'
+        required: false
+        default: ''
 
 permissions:
   contents: write
@@ -22,7 +22,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+  build-c-features:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -36,40 +36,44 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas numpy python-dateutil
-
-      # パッケージとしてTENKAIをimportできるように
-      - name: Ensure TENKAI package
-        run: |
-          mkdir -p TENKAI
-          test -f TENKAI/__init__.py || echo "" > TENKAI/__init__.py
+          pip install -r requirements.txt || pip install pandas
 
       - name: Sanity check
         run: |
           test -f TENKAI/features_c.py || { echo "TENKAI/features_c.py がありません"; exit 1; }
 
+      - name: Ensure TENKAI package
+        run: |
+          mkdir -p TENKAI
+          [ -f TENKAI/__init__.py ] || printf "" > TENKAI/__init__.py
+
       - name: Build C features
         shell: bash
         run: |
           set -eo pipefail
+          RACE_OPT=""
+          if [ -n "${{ github.event.inputs.race }}" ]; then
+            # ★ クォートを付けずに渡す（'1R' → 1R）
+            RACE_OPT="--race ${{ github.event.inputs.race }}"
+          fi
           echo ">>> 実行コマンド"
-          echo "python TENKAI/features_c.py --date '${{ github.event.inputs.date }}' --pid '${{ github.event.inputs.pid }}' --race '${{ github.event.inputs.race }}'"
-          python TENKAI/features_c.py \
-            --date "${{ github.event.inputs.date }}" \
-            --pid  "${{ github.event.inputs.pid }}" \
-            --race "${{ github.event.inputs.race }}"
+          echo python TENKAI/build_c_features.py --date ${{ github.event.inputs.date }} --pid ${{ github.event.inputs.pid }} $RACE_OPT
+          PYTHONPATH="." python TENKAI/build_c_features.py \
+            --date ${{ github.event.inputs.date }} \
+            --pid  ${{ github.event.inputs.pid }} \
+            $RACE_OPT
 
       - name: Commit outputs
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add TENKAI/features_c.csv || true
-          git diff --cached --quiet || git commit -m "TENKAI C features: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} race=${{ github.event.inputs.race }}"
+          git add TENKAI/features_c/v1/** || true
+          git diff --cached --quiet || git commit -m "TENKAI C features: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} ${{ github.event.inputs.race }}"
           git push
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: tenkai-c-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}-${{ github.event.inputs.race }}
-          path: TENKAI/features_c.csv
+          name: tenkai-c-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
+          path: TENKAI/features_c/v1/**
           if-no-files-found: warn
