--- a/.github/workflows/tenkai_features_c.yml
+++ b/.github/workflows/tenkai_features_c.yml
@@ -36,14 +36,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt || pip install pandas
+          pip install pandas
 
       - name: Sanity check
         run: |
           test -f TENKAI/features_c.py || { echo "TENKAI/features_c.py がありません"; exit 1; }
-
-      - name: Ensure TENKAI package
-        run: |
           mkdir -p TENKAI
           [ -f TENKAI/__init__.py ] || printf "" > TENKAI/__init__.py
 
@@ -53,12 +50,12 @@ jobs:
           set -eo pipefail
           RACE_OPT=""
           if [ -n "${{ github.event.inputs.race }}" ]; then
-            # ★ クォートを付けずに渡す（'1R' → 1R）
+            # 引用符なしで渡す（'1R' → 1R）
             RACE_OPT="--race ${{ github.event.inputs.race }}"
           fi
           echo ">>> 実行コマンド"
-          echo python TENKAI/build_c_features.py --date ${{ github.event.inputs.date }} --pid ${{ github.event.inputs.pid }} $RACE_OPT
-          PYTHONPATH="." python TENKAI/build_c_features.py \
+          echo python TENKAI/features_c.py --date ${{ github.event.inputs.date }} --pid ${{ github.event.inputs.pid }} $RACE_OPT
+          PYTHONPATH="." python TENKAI/features_c.py \
             --date ${{ github.event.inputs.date }} \
             --pid  ${{ github.event.inputs.pid }} \
             $RACE_OPT
