--- a/.github/workflows/tenkai_features_c.yml
+++ b/.github/workflows/tenkai_features_c.yml
@@ -47,18 +47,33 @@ jobs:
       - name: Build C features
         shell: bash
         run: |
-          set -eo pipefail
+          set -euxo pipefail
           RACE_OPT=""
           if [ -n "${{ github.event.inputs.race }}" ]; then
             # 引用符なしで渡す（'1R' → 1R）
             RACE_OPT="--race ${{ github.event.inputs.race }}"
           fi
+
           echo ">>> 実行コマンド"
           echo python TENKAI/features_c.py --date ${{ github.event.inputs.date }} --pid ${{ github.event.inputs.pid }} $RACE_OPT
+
           PYTHONPATH="." python TENKAI/features_c.py \
             --date ${{ github.event.inputs.date }} \
             --pid  ${{ github.event.inputs.pid }} \
             $RACE_OPT
+
+          echo ">>> 生成物一覧"
+          ls -alR TENKAI || true
+
+          # 出力先を正規パスに束ねる
+          OUT_DIR="TENKAI/features_c/v1/${{ github.event.inputs.date }}/${{ github.event.inputs.pid }}"
+          echo "OUT_DIR=${OUT_DIR}"
+
+          # 何も生成されてなければ失敗させて原因をすぐ掴む
+          if [ ! -d "${OUT_DIR}" ] || ! compgen -G "${OUT_DIR}/*.csv" > /dev/null; then
+            echo "ERROR: 出力CSVが見つかりません: ${OUT_DIR}/*.csv"
+            exit 1
+          fi
 
       - name: Commit outputs
         run: |
@@ -72,5 +87,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: tenkai-c-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
-          path: TENKAI/features_c/v1/**
-          if-no-files-found: warn
+          path: TENKAI/features_c/v1/${{ github.event.inputs.date }}/${{ github.event.inputs.pid }}/*.csv
+          if-no-files-found: error
