--- a/.github/workflows/tenkai_features_c.yml
+++ b/.github/workflows/tenkai_features_c.yml
@@ -1,14 +1,83 @@
-# -*- coding: utf-8 -*-
-"""
-CLI ラッパー（ワークフローからこれを叩く）
-"""
-import argparse
-from TENKAI.features_c import build_c_features
+name: Build TENKAI C features
 
-if __name__ == "__main__":
-    ap = argparse.ArgumentParser()
-    ap.add_argument("--date", required=True)
-    ap.add_argument("--pid", required=True)
-    ap.add_argument("--race", default="")
-    args = ap.parse_args()
-    build_c_features(args.date, args.pid, args.race)
+on:
+  workflow_dispatch:
+    inputs:
+      date:
+        description: '対象日 (YYYYMMDD)'
+        required: true
+      pid:
+        description: '場コード pid (例: 02)'
+        required: true
+      race:
+        description: 'レース (例: 1R) 空なら全R'
+        required: false
+        default: ''
+
+permissions:
+  contents: write
+
+concurrency:
+  group: tenkai-c-${{ github.ref }}
+  cancel-in-progress: true
+
+jobs:
+  build-c-features:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install pandas
+          fi
+
+      - name: Sanity check
+        run: |
+          test -f TENKAI/features_c.py || { echo "TENKAI/features_c.py がありません"; exit 1; }
+
+      - name: Ensure TENKAI package
+        run: |
+          mkdir -p TENKAI
+          [ -f TENKAI/__init__.py ] || printf "" > TENKAI/__init__.py
+
+      - name: Build C features
+        shell: bash
+        run: |
+          set -eo pipefail
+          RACE_OPT=""
+          if [ -n "${{ github.event.inputs.race }}" ]; then
+            # クォートしないで渡す（'1R' → 1R）
+            RACE_OPT="--race ${{ github.event.inputs.race }}"
+          fi
+          echo ">>> 実行コマンド"
+          echo python TENKAI/features_c.py --date ${{ github.event.inputs.date }} --pid ${{ github.event.inputs.pid }} $RACE_OPT
+          PYTHONPATH="." python TENKAI/features_c.py \
+            --date ${{ github.event.inputs.date }} \
+            --pid  ${{ github.event.inputs.pid }} \
+            $RACE_OPT
+
+      - name: Commit outputs
+        run: |
+          git config user.name  "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add TENKAI/features_c/v1/** || true
+          git diff --cached --quiet || git commit -m "TENKAI C features: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} ${{ github.event.inputs.race }}"
+          git push
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: tenkai-c-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
+          path: TENKAI/features_c/v1/**
+          if-no-files-found: warn
