--- a/.github/workflows/tenkai_features_c.yml
+++ b/.github/workflows/tenkai_features_c.yml
@@ -24,9 +24,24 @@ concurrency:
 jobs:
   build-c-features:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   # push衝突を避けるため履歴を取得
+
+      # 先にリモートを取り込んでおく（後段のpush衝突回避）
+      - name: Sync with remote (ff-only if possible)
+        run: |
+          set -Eeuo pipefail
+          git fetch --prune origin "+refs/heads/*:refs/remotes/origin/*"
+          # main 以外でも ref_name を使って同期
+          git checkout "${{ github.ref_name }}"
+          # 可能なら fast-forward のみ、無理なら rebase + autostash
+          if ! git merge --ff-only "origin/${{ github.ref_name }}"; then
+            git pull --rebase --autostash origin "${{ github.ref_name }}"
+          fi
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -34,10 +49,9 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        shell: bash
         run: |
-          set -euo pipefail
           python -m pip install --upgrade pip
+          # requirements.txt が無ければ最低限だけ
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
           else
@@ -45,17 +59,47 @@ jobs:
           fi
 
       - name: Sanity check
-        shell: bash
         run: |
-          set -euo pipefail
           test -f TENKAI/features_c.py || { echo "TENKAI/features_c.py がありません"; exit 1; }
+
+      - name: Ensure TENKAI package
+        run: |
           mkdir -p TENKAI
-          [ -f TENKAI/__init__.py ] || : > TENKAI/__init__.py
+          [ -f TENKAI/__init__.py ] || printf "" > TENKAI/__init__.py
+
+      # JSONのキー読み取りをログに出す（回帰チェック用）
+      - name: Sanity: echo essentials from JSON (if race specified)
+        if: ${{ github.event.inputs.race != '' }}
+        run: |
+          set -Eeuo pipefail
+          target="public/integrated/v1/${{ github.event.inputs.date }}/${{ github.event.inputs.pid }}/${{ github.event.inputs.race }}.json"
+          if [ -f "$target" ]; then
+            echo ">>> $target"
+            jq -r '
+              .entries[]
+              | {
+                  lane:.lane,
+                  ec_avgST:(.stats.entryCourse.avgST),
+                  class:(.racecard.classNumber),
+                  win_k:((.stats.entryCourse.winKimariteSelf // {})
+                         | to_entries
+                         | map(select(.key=="逃げ" or .key=="差し" or .key=="まくり" or .key=="まくり差し")|.value)
+                         | add // 0),
+                  lose_k:((.stats.entryCourse.loseKimarite // {})
+                          | to_entries
+                          | map(select(.key=="逃げ" or .key=="差し" or .key=="まくり" or .key=="まくり差し")|.value)
+                          | add // 0)
+                }
+              | @json
+            ' "$target"
+          else
+            echo "no targets: $target"
+          fi
 
       - name: Build C features
         shell: bash
         run: |
-          set -eo pipefail
+          set -Eeuo pipefail
           RACE_OPT=""
           if [ -n "${{ github.event.inputs.race }}" ]; then
             RACE_OPT="--race ${{ github.event.inputs.race }}"
@@ -68,35 +112,23 @@ jobs:
             $RACE_OPT
 
       - name: Commit outputs
-        shell: bash
         run: |
-          set -euo pipefail
+          set -Eeuo pipefail
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          # 生成物をステージ
-          git add -A TENKAI/features_c/v1/** || true
-
-          # 変更なしなら終了
+          git add TENKAI/features_c/v1/** || true
+          # 何も変更が無いときはスキップ
           if git diff --cached --quiet; then
-            echo "No changes to commit."
-            exit 0
+            echo "no changes; skip commit."
+          else
+            git commit -m "TENKAI C features: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} ${{ github.event.inputs.race }}"
+            # push 失敗時は rebase して再試行（自動スタッシュ）
+            if ! git push origin "${{ github.ref_name }}"; then
+              echo "push rejected; rebasing..."
+              git pull --rebase --autostash origin "${{ github.ref_name }}"
+              git push origin "${{ github.ref_name }}"
+            fi
           fi
-
-          # 先にリモートを取り込む（未コミットがあっても自動退避）
-          git fetch origin main
-          git pull --rebase --autostash origin main
-
-          # autostashで戻った変更を再度ステージ
-          git add -A TENKAI/features_c/v1/**
-
-          git commit -m "TENKAI C features: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} ${{ github.event.inputs.race }}"
-
-          # 競合しがちな場合のリトライ付き push
-          git push origin HEAD:main || (
-            git pull --rebase --autostash origin main &&
-            git push origin HEAD:main
-          )
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
