--- a/.github/workflows/tenkai-build-labels.yml
+++ b/.github/workflows/tenkai-build-labels.yml
@@ -10,7 +10,7 @@ on:
         description: '場コード pid (例: 02)'
         required: true
       race:
-        description: 'レース (例: 1R) 空なら1R..12R全部'
+        description: 'レース (例: 1R) 空/ALL/全部なら1R..12R全部'
         required: false
         default: ''
 
@@ -45,22 +45,25 @@ jobs:
       - name: Ensure TENKAI package dir
         run: |
           mkdir -p TENKAI
-          [ -f TENKAI/__init__.py ] || printf "" > TENKAI/__init__.py
+          [ -f TENKAI/__init__.py ] || : > TENKAI/__init__.py
 
       - name: Build labels (supports ALL)
         shell: bash
         run: |
           set -euo pipefail
-          RACE_OPT=""
-          if [ -n "${{ github.event.inputs.race }}" ]; then
-            RACE_OPT="--race ${{ github.event.inputs.race }}"
+          DATE="${{ github.event.inputs.date }}"
+          PID="${{ github.event.inputs.pid }}"
+          RACE="${{ github.event.inputs.race }}"
+          # 空欄 / ALL / 全部 → 全R
+          if [[ -z "${RACE}" || "${RACE,,}" == "all" || "${RACE}" == "全部" ]]; then
+            RACE_OPT=""
+            echo ">>> race: ALL (1R..12R を処理)"
+          else
+            RACE_OPT="--race ${RACE}"
+            echo ">>> race: ${RACE}"
           fi
-          echo ">>> 実行コマンド"
-          echo python TENKAI/build_labels.py --date ${{ github.event.inputs.date }} --pid ${{ github.event.inputs.pid }} $RACE_OPT
-          PYTHONPATH="." python TENKAI/build_labels.py \
-            --date ${{ github.event.inputs.date }} \
-            --pid  ${{ github.event.inputs.pid }} \
-            $RACE_OPT
+          echo ">>> cmd: python TENKAI/build_labels.py --date ${DATE} --pid ${PID} ${RACE_OPT}"
+          PYTHONPATH="." python TENKAI/build_labels.py --date "${DATE}" --pid "${PID}" ${RACE_OPT}
 
       - name: Commit outputs
         shell: bash
@@ -68,21 +71,21 @@ jobs:
           set -euo pipefail
           OUTDIR="TENKAI/labels/v1/${{ github.event.inputs.date }}/${{ github.event.inputs.pid }}"
           echo ">>> OUTDIR=${OUTDIR}"
-          if [ -d "$OUTDIR" ]; then
+          if [ -d "${OUTDIR}" ]; then
             git config user.name  "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
-            git fetch origin
-            git pull --rebase origin "${GITHUB_REF_NAME:-main}" || true
-            git add "$OUTDIR"/** || true
-            git diff --cached --quiet || git commit -m "TENKAI labels: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} ${{ github.event.inputs.race }}"
-            git push || true
+            git fetch --all --prune || true
+            git pull --rebase || true
+            git add "${OUTDIR}/"** || true
+            git diff --cached --quiet || git commit -m "TENKAI labels: ${{ github.event.inputs.date }} pid=${{ github.event.inputs.pid }} ${{ github.event.inputs.race || 'ALL' }}"
+            git push || git push --force-with-lease
           else
-            echo "OUTDIR not found, nothing to commit."
+            echo "no outputs under ${OUTDIR}; skip commit"
           fi
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: tenkai-labels-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '' }}
+          name: tenkai-labels-${{ github.event.inputs.date }}-${{ github.event.inputs.pid }}${{ github.event.inputs.race && format('-{0}', github.event.inputs.race) || '-ALL' }}
           path: TENKAI/labels/v1/${{ github.event.inputs.date }}/${{ github.event.inputs.pid }}/**
           if-no-files-found: warn
